--- a/page-contact.html
+++ b/page-contact.html
@@ -22,127 +22,22 @@
       <h1>
         <a href="index.html">
           <img src="assets/imgs/template/logo.svg" alt="logo" class="flex-shrink-0 relative dark:hidden">
-          <img src="assets/imgs/template/logo-white.svg" alt="logo" class="flex-shrink-0 relative hidden dark:inline-block">
+          <img src="assets/imgs/template/logo-white.svg" alt="logo"
+            class="flex-shrink-0 relative hidden dark:inline-block">
         </a>
       </h1>
       <ul class="xl:flex hidden">
-        
+
         <li class="relative"><a href="index.html" class="menu-item">Home</a></li>
 
-        <li class="relative"><a href="certification.html" class="menu-item">Certification</a></li>
-        <li class="relative"><a href="page-about.html" class="menu-item">About Us</a></li>
-        <li class="group">
-          <a href="blog.html" class="menu-item group-hover:border-white">News & Stories</a>
-          <!-- MEGA MENU CONTENT -->
-          <div class="w-full px-12 py-12 rounded-2xl bg-neutral-0 dark:bg-neutral-dark-0 shadow-sm absolute top-full left-0 mt-8 opacity-0 invisible group-hover:opacity-100 group-hover:visible group-hover:mt-4 transition-all duration-500">
-            <h3 class="text-5xl mb-8 text-neutral-950 dark:text-neutral-dark-950">Featured <span class="font-bold">Posts</span></h3>
-            <div class="grid grid-cols-3 w-full gap-10">
-              <div class="flex flex-col gap-4">
-                <div class="flex gap-6 content-center hover-up">
-                  <div class="max-w-28">
-                    <a class="inline-block md:mb-0 overflow-hidden rounded-2xl" href="single.html">
-                      <img src="assets/imgs/pages/thumb-01.png" alt="ideko">
-                    </a>
-                  </div>
-                  <div class="flex flex-col gap-3">
-                    <a class="text-base font-bold text-neutral-950 dark:text-neutral-dark-950" href="single.html">
-                      Beyond the Pixels: My Art-Tech Lifestyle Journey
-                    </a>
-                    <p class="text-sm font-medium text-neutral-700">
-                      2 min read - June 8, 2023
-                    </p>
-                  </div>
-                </div>
-                <div class="flex gap-6 content-center hover-up">
-                  <div class="max-w-28">
-                    <a class="inline-block md:mb-0 overflow-hidden rounded-2xl" href="single.html">
-                      <img src="assets/imgs/pages/thumb-02.png" alt="ideko">
-                    </a>
-                  </div>
-                  <div class="flex flex-col gap-3">
-                    <a class="text-base font-bold text-neutral-950 dark:text-neutral-dark-950" href="single.html">
-                      Globetrotting in Style: A Journey Through My Lens
-                    </a>
-                    <p class="text-sm font-medium text-neutral-700">
-                      2 min read - June 8, 2023
-                    </p>
-                  </div>
-                </div>
-              </div>
 
-              <div class="flex flex-col gap-4">
-                <div class="flex gap-6 content-center hover-up">
-                  <div class="max-w-28">
-                    <a class="inline-block md:mb-0 overflow-hidden rounded-2xl" href="single.html">
-                      <img src="assets/imgs/pages/thumb-03.png" alt="ideko">
-                    </a>
-                  </div>
-                  <div class="flex flex-col gap-3">
-                    <a class="text-base font-bold text-neutral-950 dark:text-neutral-dark-950" href="single.html">
-                      Canvas and Keyboard: An Art-Tech Affair
-                    </a>
-                    <p class="text-sm font-medium text-neutral-700">
-                      2 min read - June 8, 2023
-                    </p>
-                  </div>
-                </div>
-                <div class="flex gap-6 content-center hover-up">
-                  <div class="max-w-28">
-                    <a class="inline-block md:mb-0 overflow-hidden rounded-2xl" href="single.html">
-                      <img src="assets/imgs/pages/thumb-04.png" alt="ideko">
-                    </a>
-                  </div>
-                  <div class="flex flex-col gap-3">
-                    <a class="text-base font-bold text-neutral-950 dark:text-neutral-dark-950" href="single.html">
-                      Beyond the Pixels: My Art-Tech Lifestyle Journey
-                    </a>
-                    <p class="text-sm font-medium text-neutral-700">
-                      2 min read - June 8, 2023
-                    </p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="flex flex-col gap-4">
-                <div class="flex gap-6 content-center hover-up">
-                  <div class="max-w-28">
-                    <a class="inline-block md:mb-0 overflow-hidden rounded-2xl" href="single.html">
-                      <img src="assets/imgs/pages/thumb-05.png" alt="ideko">
-                    </a>
-                  </div>
-                  <div class="flex flex-col gap-3">
-                    <a class="text-base font-bold text-neutral-950 dark:text-neutral-dark-950" href="single.html">
-                      Chasing Sunsets: A Lifestyle in Living Color
-                    </a>
-                    <p class="text-sm font-medium text-neutral-700">
-                      2 min read - June 8, 2023
-                    </p>
-                  </div>
-                </div>
-                <div class="flex gap-6 content-center hover-up">
-                  <div class="max-w-28">
-                    <a class="inline-block md:mb-0 overflow-hidden rounded-2xl" href="single.html">
-                      <img src="assets/imgs/pages/thumb-06.png" alt="ideko">
-                    </a>
-                  </div>
-                  <div class="flex flex-col gap-3">
-                    <a class="text-base font-bold text-neutral-950 dark:text-neutral-dark-950" href="single.html">
-                      Exploring Life's Canvas: Style, Tech, and Beyond
-                    </a>
-                    <p class="text-sm font-medium text-neutral-700">
-                      2 min read - June 8, 2023
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- END MEGA MENU CONTENT -->
-        </li>
-        <li class="relative"><a href="page-contact.html" class="menu-item">Contact</a></li>
+        <li class="relative"><a href="#about" class="menu-item">About Us</a></li>
+        <li class="relative"><a href="#news" class="menu-item">Latest News & Stories</a></li>
+        <li class="relative"><a href="#certification" class="menu-item">Certification</a></li>
+        <!-- <li class="relative"><a href="page-contact.html" class="menu-item">Contact</a></li> -->
       </ul>
       <div class="flex justify-end align-middle content-center items-center relative gap-4">
-       
+
 
         <div class="dark-light cursor-pointer flex relative z-20">
           <img src="assets/imgs/template/icon-dark-light.svg" alt="dark/light" class="dark:hidden">
@@ -194,12 +89,20 @@
           </a>
         </div>
         <button class="navbar-burger self-center xl:hidden">
-          <svg class="fill-neutral-950 dark:fill-neutral-dark-950" id="fi_2976215" enable-background="new 0 0 464.205 464.205" height="26" viewBox="0 0 464.205 464.205" width="26" xmlns="http://www.w3.org/2000/svg">
+          <svg class="fill-neutral-950 dark:fill-neutral-dark-950" id="fi_2976215"
+            enable-background="new 0 0 464.205 464.205" height="26" viewBox="0 0 464.205 464.205" width="26"
+            xmlns="http://www.w3.org/2000/svg">
             <g>
               <g id="grip-solid-horizontal_1_">
-                <path d="m435.192 406.18h-406.179c-16.024 0-29.013-12.99-29.013-29.013s12.989-29.013 29.013-29.013h406.18c16.023 0 29.013 12.99 29.013 29.013-.001 16.023-12.99 29.013-29.014 29.013z"></path>
-                <path d="m435.192 261.115h-406.179c-16.024 0-29.013-12.989-29.013-29.012s12.989-29.013 29.013-29.013h406.18c16.023 0 29.013 12.989 29.013 29.013s-12.99 29.012-29.014 29.012z"></path>
-                <path d="m435.192 116.051h-406.179c-16.024 0-29.013-12.989-29.013-29.013s12.989-29.013 29.013-29.013h406.18c16.023 0 29.013 12.989 29.013 29.013s-12.99 29.013-29.014 29.013z"></path>
+                <path
+                  d="m435.192 406.18h-406.179c-16.024 0-29.013-12.99-29.013-29.013s12.989-29.013 29.013-29.013h406.18c16.023 0 29.013 12.99 29.013 29.013-.001 16.023-12.99 29.013-29.014 29.013z">
+                </path>
+                <path
+                  d="m435.192 261.115h-406.179c-16.024 0-29.013-12.989-29.013-29.012s12.989-29.013 29.013-29.013h406.18c16.023 0 29.013 12.989 29.013 29.013s-12.99 29.012-29.014 29.012z">
+                </path>
+                <path
+                  d="m435.192 116.051h-406.179c-16.024 0-29.013-12.989-29.013-29.013s12.989-29.013 29.013-29.013h406.18c16.023 0 29.013 12.989 29.013 29.013s-12.99 29.013-29.014 29.013z">
+                </path>
               </g>
             </g>
           </svg>
@@ -213,28 +116,35 @@
               <h1 class="pt-2 pb-6">
                 <a href="index.html">
                   <img src="assets/imgs/template/logo.svg" alt="logo" class="flex-shrink-0 relative dark:hidden">
-                  <img src="assets/imgs/template/logo-white.svg" alt="logo" class="flex-shrink-0 relative hidden dark:inline-block">
+                  <img src="assets/imgs/template/logo-white.svg" alt="logo"
+                    class="flex-shrink-0 relative hidden dark:inline-block">
                 </a>
               </h1>
               <ul class="py-6 mb-6 border-y border-neutral-300 dark:border-neutral-dark-300">
-                <li><a class="menu-mobile-item" href="page-about.html">Home</a></li>
-                <li><a class="menu-mobile-item" href="page-about.html">About</a></li>
-                <li><a class="menu-mobile-item" href="certification.html">Certification</a></li> 
-                <li><a class="menu-mobile-item" href="category.html">News & Stories</a></li>
-                <li><a class="menu-mobile-item" href="page-contact.html">Contact</a></li>
+                <li class="relative"><a href="index.html" class="menu-item">Home</a></li>
+                <li class="relative"><a href="#about" class="menu-item">About Us</a></li>
+                <li class="relative"><a href="#news" class="menu-item">Latest News & Stories</a></li>
+                <li class="relative"><a href="#certification" class="menu-item">Certification</a></li>
               </ul>
               <div class="flex flex-wrap flex-col mt-4">
                 <h4 class="text-lg text-neutral-950 dark:text-neutral-dark-950 font-bold mb-4">Stay Connectted</h4>
-                <p class="text-sm text-neutral-700 font-medium mb-4 leading-5">Imagine waking up to a dose of positivity, lifestyle hacks, and inspiration tailored just for you. That's what you get when you subscribe!</p>
-                <a href="page-login.html" class="w-full p-4 text-neutral-950 bg-primary-light-950 rounded-md font-bold text-sm">Subscribe Now</a>
+                <p class="text-sm text-neutral-700 font-medium mb-4 leading-5">Imagine waking up to a dose of
+                  positivity, lifestyle hacks, and inspiration tailored just for you. That's what you get when you
+                  subscribe!</p>
+                <a href="page-login.html"
+                  class="w-full p-4 text-neutral-950 bg-primary-light-950 rounded-md font-bold text-sm">Subscribe
+                  Now</a>
               </div>
             </div>
           </nav>
           <a class="navbar-close absolute top-5 p-4 right-3" href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="fill-neutral-950 dark:fill-neutral-dark-950">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none"
+              class="fill-neutral-950 dark:fill-neutral-dark-950">
               <g clip-path="url(#clip0_85_6880)">
-                <path d="M1.42193 15.7358C1.05417 15.7571 0.692494 15.6349 0.413167 15.3948C-0.137722 14.8406 -0.137722 13.9456 0.413167 13.3914L12.4758 1.32871C13.0488 0.792556 13.9479 0.82236 14.484 1.39533C14.9689 1.91347 14.9971 2.70986 14.5502 3.26103L2.41647 15.3948C2.14074 15.6314 1.78487 15.7534 1.42193 15.7358Z" />
-                <path d="M13.4712 15.7338C13.0985 15.7322 12.7412 15.5843 12.4766 15.3218L0.413906 3.25906C-0.0964635 2.66307 -0.027076 1.76613 0.568917 1.25571C1.10086 0.800179 1.88536 0.800179 2.41725 1.25571L14.551 13.3184C15.1238 13.8547 15.1534 14.7538 14.6171 15.3267C14.5958 15.3495 14.5738 15.3715 14.551 15.3928C14.2539 15.6512 13.8629 15.7747 13.4712 15.7338Z" />
+                <path
+                  d="M1.42193 15.7358C1.05417 15.7571 0.692494 15.6349 0.413167 15.3948C-0.137722 14.8406 -0.137722 13.9456 0.413167 13.3914L12.4758 1.32871C13.0488 0.792556 13.9479 0.82236 14.484 1.39533C14.9689 1.91347 14.9971 2.70986 14.5502 3.26103L2.41647 15.3948C2.14074 15.6314 1.78487 15.7534 1.42193 15.7358Z" />
+                <path
+                  d="M13.4712 15.7338C13.0985 15.7322 12.7412 15.5843 12.4766 15.3218L0.413906 3.25906C-0.0964635 2.66307 -0.027076 1.76613 0.568917 1.25571C1.10086 0.800179 1.88536 0.800179 2.41725 1.25571L14.551 13.3184C15.1238 13.8547 15.1534 14.7538 14.6171 15.3267C14.5958 15.3495 14.5738 15.3715 14.551 15.3928C14.2539 15.6512 13.8629 15.7747 13.4712 15.7338Z" />
               </g>
               <defs>
                 <clipPath id="clip0_85_6880">
