--- a/index.html
+++ b/index.html
@@ -452,19 +452,18 @@
       <div class="flex justify-between items-center gap-8 lg:gap-32 mt-12 flex-col lg:flex-row">
         <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">Genext Certification is
           tailor-made for SMEs. If you operate for profit and have been in business for at least 12 months, you're
-          eligible. Dive into our straightforward 6-step guide and become part of the community of businesses making a
-          difference.</p>
+          eligible. </p>
 
       </div>
       <div class="swiper-container post-slider-4">
         <div class="swiper-wrapper pt-4">
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
-              <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl"
+              <a href="page-contact.html"><img class="left-0 top-0 absolute rounded-3xl"
                   src="assets/imgs/pages/tech.webp" /></a>
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
-                <a href="category.html"
+                <a href="page-contact.html"
                   class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Technology</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
@@ -475,11 +474,11 @@
           </div>
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
-              <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl"
+              <a href="page-contact.html"><img class="left-0 top-0 absolute rounded-3xl"
                   src="assets/imgs/pages/restaurant.webp" /></a>
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
-                <a href="category.html"
+                <a href="page-contact.html"
                   class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Hospitality</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
@@ -490,11 +489,11 @@
           </div>
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
-              <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl"
+              <a href="page-contact.html"><img class="left-0 top-0 absolute rounded-3xl"
                   src="assets/imgs/pages/professional.webp" /></a>
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
-                <a href="category.html"
+                <a href="page-contact.html"
                   class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Professional Services</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
@@ -505,11 +504,11 @@
           </div>
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
-              <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl"
+              <a href="page-contact.html"><img class="left-0 top-0 absolute rounded-3xl"
                   src="assets/imgs/pages/manufacturing.webp" /></a>
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
-                <a href="category.html"
+                <a href="page-contact.html"
                   class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Manufacturing</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
@@ -520,11 +519,11 @@
           </div>
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
-              <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl"
+              <a href="page-contact.html"><img class="left-0 top-0 absolute rounded-3xl"
                   src="assets/imgs/pages/retail.webp" /></a>
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
-                <a href="category.html"
+                <a href="page-contact.html"
                   class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Retail</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
@@ -535,11 +534,11 @@
           </div>
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
-              <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl"
+              <a href="page-contact.html"><img class="left-0 top-0 absolute rounded-3xl"
                   src="assets/imgs/pages/tourism.webp" /></a>
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
-                <a href="category.html"
+                <a href="page-contact.html"
                   class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Tourism</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
