--- a/page-contact.html
+++ b/page-contact.html
@@ -128,10 +128,10 @@
               </ul>
               <div class="flex flex-wrap flex-col mt-4">
                 <h4 class="text-lg text-neutral-950 dark:text-neutral-dark-950 font-bold mb-4">Stay Connectted</h4>
-                <p class="text-sm text-neutral-700 font-medium mb-4 leading-5">Imagine waking up to a dose of
-                  positivity, lifestyle hacks, and inspiration tailored just for you. That's what you get when you
+                <p class="text-sm text-neutral-700 font-medium mb-4 leading-5">A monthly dose of
+                  positivity, business hacks, and inspiration tailored just for you. That's what you get when you
                   subscribe!</p>
-                <a href="page-login.html"
+                <a href="page-register.html"
                   class="w-full p-4 text-neutral-950 bg-primary-light-950 rounded-md font-bold text-sm">Subscribe
                   Now</a>
               </div>
@@ -213,7 +213,7 @@
       </div>
     </div>
   </section>
-  <section class="pb-24">
+  <!-- <section class="pb-24">
     <div class="container px-4">
       <div class="flex flex-col gap-8 md:flex-row justify-between items-center mx-auto lg:max-w-[950px]">
         <div class="flex flex-col item-center justify-center text-center">
@@ -256,7 +256,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <section class="relative py-10 lg:pb-24">
     <div class="container px-4">
       <div class="mx-auto grid lg:grid-cols-2 gap-8 lg:gap-16 items-center justify-center max-w-[1070px] bg-primary-light-300 dark:bg-primary-dark-300 rounded-3xl px-8 py-12 md:px-16 md:py-24 overflow-hidden relative">
