--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <div class="grid md:grid-cols-1 lg:grid-cols-2 gap-x-[30px] gap-y-[65px] max-w-[850px]">
           <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
             <a href="genext-launch.html" class="rounded-3xl overflow-hidden max-h-[606px]">
-              <img src="assets/imgs/pages/img-06.webp" />
+              <img src="assets/imgs/pages/launch.webp" />
             </a>
             <div class="flex-col justify-start items-start gap-3.5 flex">
               <div class="justify-start items-center gap-5 inline-flex">
@@ -254,7 +254,7 @@
           </div>
           <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
             <a href="building-consumer-trust.html" class="rounded-3xl overflow-hidden max-h-[606px]">
-              <img src="assets/imgs/pages/img-06.webp" />
+              <img src="assets/imgs/pages/trust.webp" />
             </a>
             <div class="flex-col justify-start items-start gap-3.5 flex">
               <div class="justify-start items-center gap-5 inline-flex">
@@ -370,7 +370,7 @@
               </div>
               <div class="w-full px-8 bottom-12 absolute text-center">
                 <span class="text-xl text-neutral-0 font-bold">
-                  <span class="font-light">It seeks to inspire and</span> motivate individuals
+                  <span class="font-light">We recognise and</span> inspire business as a force for good
                 </span>
               </div>
             </div>
@@ -394,11 +394,11 @@
         </h2>
         <div class="flex flex-col gap-8">
           <p class="text-lg font-medium text-neutral-700 dark:text-neutral-dark-300">Ready to get certified as a next
-            generation business? Join our vibrant community and be part of the conversation.</p>
+            generation business? Register today, to be among the first to achieve certification.</p>
           <div class="flex flex-col md:flex-row gap-4">
             <a href="page-login.html"
               class="group btn bg-primary-light-950 dark:bg-primary-dark-950 rounded-full px-8 py-4 text-xl text-neutral-950 dark:text-neutral-dark-950 flex gap-2 items-center">
-              <span>Get Started</span>
+              <span>Register</span>
               <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
                 class="fill-neutral-950 dark:fill-neutral-dark-950 group-hover:translate-x-1 transition-all duration-300">
                 <g clip-path="url(#clip0_253_4238)">
@@ -413,9 +413,7 @@
                 </defs>
               </svg>
             </a>
-            <a href="page-contact.html"
-              class="btn border border-neutral-950 dark:bg-neutral-dark-0 rounded-full px-8 py-4 text-xl text-neutral-950 dark:text-neutral-dark-950 items-center">Contact
-              Us</a>
+            
           </div>
         </div>
         <img src="assets/imgs/template/shape-1.svg" alt="" class="absolute top-0 left-0 opacity-10 ">
