--- a/building-consumer-trust.html
+++ b/building-consumer-trust.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GENEXT</title>
+    <title>GeNext</title>
     <link rel="icon" href="assets/imgs/template/favicon.svg" type="image/svg+xml" />
     <script src="assets/js/vendors/color-modes.js"></script>
     <link rel="preconnect" href="https://fonts.bunny.net">
@@ -31,9 +31,9 @@
                 <li class="relative"><a href="index.html" class="menu-item">Home</a></li>
 
 
-                <li class="relative"><a href="#about" class="menu-item">About Us</a></li>
-                <li class="relative"><a href="#news" class="menu-item">Latest News & Stories</a></li>
-                <li class="relative"><a href="#certification" class="menu-item">Certification</a></li>
+                <li class="relative"><a href="about.html" class="menu-item">About Us</a></li>
+                <!-- <li class="relative"><a href="blog.html" class="menu-item">Latest News & Stories</a></li> -->
+                <li class="relative"><a href="coming-soon.html" class="menu-item">Certification</a></li>
                 <!-- <li class="relative"><a href="page-contact.html" class="menu-item">Contact</a></li> -->
             </ul>
             <div class="flex justify-end align-middle content-center items-center relative gap-4">
@@ -84,11 +84,11 @@
           </div>
         </div> -->
 
-                <div class="py-4 hover-up xl:flex hidden relative z-20">
-                    <a class="btn-primary" href="page-login.html">
-                        Sign in
-                    </a>
-                </div>
+                <!-- <div class="py-4 hover-up xl:flex hidden relative z-20">
+          <a class="btn-primary" href="page-login.html">
+            Sign in
+          </a>
+        </div> -->
                 <button class="navbar-burger self-center xl:hidden">
                     <svg class="fill-neutral-950 dark:fill-neutral-dark-950" id="fi_2976215"
                         enable-background="new 0 0 464.205 464.205" height="26" viewBox="0 0 464.205 464.205" width="26"
@@ -124,22 +124,19 @@
                             </h1>
                             <ul class="py-6 mb-6 border-y border-neutral-300 dark:border-neutral-dark-300">
                                 <li class="relative"><a href="index.html" class="menu-item">Home</a></li>
-                                <li class="relative"><a href="#about" class="menu-item">About Us</a></li>
-                                <li class="relative"><a href="#news" class="menu-item">Latest News & Stories</a></li>
-                                <li class="relative"><a href="#certification" class="menu-item">Certification</a></li>
+                                <li class="relative"><a href="about.html" class="menu-item">About Us</a></li>
+                                <!-- <li class="relative"><a href="blog.html" class="menu-item">Latest News & Stories</a></li> -->
+                                <li class="relative"><a href="coming-soon.html" class="menu-item">Certification</a></li>
                             </ul>
-                            <div class="flex flex-wrap flex-col mt-4">
-                                <h4 class="text-lg text-neutral-950 dark:text-neutral-dark-950 font-bold mb-4">Stay
-                                    Connectted</h4>
-                                <p class="text-sm text-neutral-700 font-medium mb-4 leading-5">Imagine waking up to a
-                                    dose of
-                                    positivity, lifestyle hacks, and inspiration tailored just for you. That's what you
-                                    get when you
-                                    subscribe!</p>
-                                <a href="page-login.html"
-                                    class="w-full p-4 text-neutral-950 bg-primary-light-950 rounded-md font-bold text-sm">Subscribe
-                                    Now</a>
-                            </div>
+                            <!-- <div class="flex flex-wrap flex-col mt-4">
+                <h4 class="text-lg text-neutral-950 dark:text-neutral-dark-950 font-bold mb-4">Stay Connectted</h4>
+                <p class="text-sm text-neutral-700 font-medium mb-4 leading-5">Imagine waking up to a dose of
+                  positivity, lifestyle hacks, and inspiration tailored just for you. That's what you get when you
+                  subscribe!</p>
+                <a href="page-login.html"
+                  class="w-full p-4 text-neutral-950 bg-primary-light-950 rounded-md font-bold text-sm">Subscribe
+                  Now</a>
+              </div> -->
                         </div>
                     </nav>
                     <a class="navbar-close absolute top-5 p-4 right-3" href="#">
@@ -169,69 +166,6 @@
         class="header-bg absolute top-0 left-0 right-0 -z-50 w-full h-[1100px] bg-gradient-to-b from-primary-light-950/15 to-transparent max-h-[1100px] overflow-hidden">
     </div>
 
-    <!-- Single 1 Section 1 -->
-    <section class="relative py-4 lg:py-12">
-        <div class="container px-4">
-            <div class="flex w-full justify-center item-center mb-16">
-                <!-- breadcrumb -->
-                <div
-                    class="hidden md:flex gap-2.5  justify-start items-center h-12 px-7 py-3.5 bg-neutral-0 dark:bg-neutral-dark-0 rounded-3xl border border-neutral-300 dark:border-neutral-dark-300">
-                    <a href="index.html"
-                        class="text-neutral-700 dark:text-neutral-dark-700 text-base font-medium  leading-normal">Home</a>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12"
-                        class="fill-neutral-700 dark:fill-neutral-dark-700">
-                        <path
-                            d="M1.52344 11.9961C1.24219 11.9961 0.992188 11.9023 0.804688 11.7148C0.398438 11.3398 0.398438 10.6836 0.804688 10.3086L5.08594 5.99609L0.804688 1.71484C0.398438 1.33984 0.398438 0.683594 0.804688 0.308594C1.17969 -0.0976562 1.83594 -0.0976562 2.21094 0.308594L7.21094 5.30859C7.61719 5.68359 7.61719 6.33984 7.21094 6.71484L2.21094 11.7148C2.02344 11.9023 1.77344 11.9961 1.52344 11.9961Z" />
-                    </svg>
-                    <a href="category.html"
-                        class="text-neutral-700 dark:text-neutral-dark-700 text-base font-medium leading-normal">Blog</a>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12"
-                        class="fill-neutral-700 dark:fill-neutral-dark-700">
-                        <path
-                            d="M1.52344 11.9961C1.24219 11.9961 0.992188 11.9023 0.804688 11.7148C0.398438 11.3398 0.398438 10.6836 0.804688 10.3086L5.08594 5.99609L0.804688 1.71484C0.398438 1.33984 0.398438 0.683594 0.804688 0.308594C1.17969 -0.0976562 1.83594 -0.0976562 2.21094 0.308594L7.21094 5.30859C7.61719 5.68359 7.61719 6.33984 7.21094 6.71484L2.21094 11.7148C2.02344 11.9023 1.77344 11.9961 1.52344 11.9961Z" />
-                    </svg>
-                    <span class="text-neutral-900 dark:text-neutral-dark-950 text-base font-bold leading-snug">It seeks
-                        to inspire and motivate individuals </span>
-                </div>
-            </div>
-            <div class="swiper-container post-slider-1 mb-12">
-                <div class="swiper-wrapper pt-4">
-                    <div class="swiper-slide">
-                        <img src="assets/imgs/pages/img-26.png" class="rounded-e-3xl" alt="">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="assets/imgs/pages/img-27.png" class="rounded-3xl" alt="">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="assets/imgs/pages/img-28.png" class="rounded-3xl" alt="">
-                    </div>
-                </div>
-            </div>
-
-            <div class="flex flex-col gap-4 items-center justify-center text-center">
-                <div class="justify-center items-center gap-4 flex flex-col md:flex-row">
-                    <a href="category.html"
-                        class="inline-flex  px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-300 dark:border-neutral-dark-300 justify-center items-center gap-2.5">
-                        <span
-                            class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Technology</span>
-                    </a>
-                    <div class="justify-start items-center gap-2 flex">
-                        <a href="author.html"><img class="w-9 h-9 rounded-3xl"
-                                src="assets/imgs/avatar/avatar-10.png" /></a>
-                        <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700"><a
-                                href="author.html">M. Azumi</a> - 28 January 2014</div>
-                    </div>
-                </div>
-                <h1
-                    class="text-4xl lg:text-6xl font-bold text-neutral-950 dark:text-neutral-dark-950 max-w-5xl leading-snug">
-                    Building Consumer Trust: How UK Small Businesses Can Thrive in 2025
-                </h1>
-                <p class="text-base md:text-lg font-medium text-neutral-950 dark:text-neutral-dark-950 max-w-3xl">In an era of digital skepticism, small businesses in the UK have a unique
-                    opportunity to cultivate and expand consumer trust through transparency, community
-                    engagement, and authentic interactions.</p>
-            </div>
-        </div>
-    </section>
     <!-- Single 2 Section 2 -->
     <section class="relative py-12">
         <div class="container px-4">
@@ -241,9 +175,15 @@
 
                     <div
                         class="single-content text-base font-medium text-neutral-950 dark:text-neutral-dark-950 leading-relaxed max-w-[850px]">
-                        <img src="assets/imgs/pages/img-25.png" class="rounded-3xl mb-8" alt="">
-
                         
+
+                        <h1
+                    class="text-4xl lg:text-6xl font-bold text-neutral-950 dark:text-neutral-dark-950 max-w-5xl leading-snug">
+                    Building Consumer Trust: How UK Small Businesses Can Thrive in 2025
+                </h1>
+                <p class="text-base md:text-lg font-medium text-neutral-950 dark:text-neutral-dark-950 max-w-3xl">In an era of digital skepticism, small businesses in the UK have a unique
+                    opportunity to cultivate and expand consumer trust through transparency, community
+                    engagement, and authentic interactions.</p>
 
                         <p class="mb-4"> Recent studies paint a compelling picture: a
                             staggering 80% of British consumers distrust social media content, while 63% prefer
