--- a/index-3.html
+++ b/index-3.html
@@ -4,7 +4,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GENEXT</title>
+  <title>GeNext</title>
+  <meta name="description" content="GeNext is reshaping business through a people-first approach. We help organisations unlock the power of Culture, Customers, and Community to drive meaningful impact." />
+  <meta name="keywords" content="GeNext, Culture, Customers, Community, Business Transformation, Employee Engagement, Customer Experience, Purpose-led Growth" />
+  <meta name="author" content="GeNext" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="GeNext - Culture. Customers. Community.">
+  <meta property="og:description" content="GeNext helps forward-thinking organisations thrive by aligning their people, customers, and communities for long-term success.">
+  <meta property="og:image" content="assets/imgs/social/social.webp">
+  <meta property="og:url" content="https://genext.io">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="GeNext - Culture. Customers. Community.">
+  <meta name="twitter:description" content="Unlock the power of people-first strategy with GeNext. Explore how culture, customer focus, and community engagement drive success.">
+  <meta name="twitter:image" content="assets/imgs/social/social.webp">
+
   <link rel="icon" href="assets/imgs/template/favicon.svg" type="image/svg+xml" />
   <script src="assets/js/vendors/color-modes.js"></script>
   <link rel="preconnect" href="https://fonts.bunny.net">
@@ -15,6 +32,7 @@
   <link rel="stylesheet" href="assets/css/vendors/lightbox.css">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
+
 
 <body class="bg-neutral-0 dark:bg-neutral-dark-0">
   <header class="main-header main-header-dark w-full mx-auto flex justify-center py-2 z-50 relative dark:bg-primary-dark-0">
