--- a/index_full.html
+++ b/index_full.html
@@ -6,21 +6,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GeNext</title>
-  <meta name="description" content="GeNext is reshaping business through a people-first approach. We help organisations unlock the power of Culture, Customers, and Community to drive meaningful impact." />
+  <meta name="description" content="Genext. Certification that goes beyond the ordinary." />
   <meta name="keywords" content="GeNext, Culture, Customers, Community, Business Transformation, Employee Engagement, Customer Experience, Purpose-led Growth" />
   <meta name="author" content="GeNext" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="GeNext - Culture. Customers. Community.">
-  <meta property="og:description" content="GeNext helps forward-thinking organisations thrive by aligning their people, customers, and communities for long-term success.">
+  <meta property="og:description" content="Genext. Certification that goes beyond the ordinary.">
   <meta property="og:image" content="assets/imgs/social/social.webp">
   <meta property="og:url" content="https://genext.io">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="GeNext - Culture. Customers. Community.">
-  <meta name="twitter:description" content="Unlock the power of people-first strategy with GeNext. Explore how culture, customer focus, and community engagement drive success.">
+  <meta name="twitter:description" content="Genext. Certification that goes beyond the ordinary.">
   <meta name="twitter:image" content="assets/imgs/social/social.webp">
 
   <link rel="icon" href="assets/imgs/template/favicon.svg" type="image/svg+xml" />
